@@ -2,6 +2,8 @@ package com.moakiee.ae2lt.blockentity;
 
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
+
+import net.minecraft.util.Mth;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -36,11 +38,10 @@ import com.moakiee.ae2lt.registry.ModBlockEntities;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
-import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.Tag;
-import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
@@ -65,14 +66,14 @@ import appeng.api.storage.MEStorage;
 import appeng.api.storage.cells.ICellWorkbenchItem;
 import appeng.api.util.AECableType;
 import appeng.blockentity.misc.InterfaceBlockEntity;
-import appeng.blockentity.grid.AENetworkedBlockEntity;
+import appeng.blockentity.grid.AENetworkInvBlockEntity;
 import appeng.core.definitions.AEItems;
 import appeng.helpers.InterfaceLogic;
 import appeng.util.inv.AppEngInternalInventory;
 import appeng.util.inv.InternalInventoryHost;
 
 import appeng.menu.MenuOpener;
-import appeng.menu.locator.MenuHostLocator;
+import appeng.menu.locator.MenuLocator;
 import appeng.parts.automation.StackWorldBehaviors;
 
 public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
@@ -171,10 +172,11 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
             return tag;
         }
 
+        @SuppressWarnings("unchecked")
         public static WirelessConnection fromTag(CompoundTag tag) {
-            var dim = ResourceKey.create(
-                    net.minecraft.core.registries.Registries.DIMENSION,
-                    ResourceLocation.parse(tag.getString(TAG_DIM)));
+            var dim = (ResourceKey<Level>) (ResourceKey<?>) ResourceKey.create(
+                    ResourceKey.createRegistryKey(new ResourceLocation("dimension")),
+                    new ResourceLocation(tag.getString(TAG_DIM)));
             return new WirelessConnection(
                     dim, BlockPos.of(tag.getLong(TAG_POS)),
                     Direction.from3DDataValue(tag.getInt(TAG_FACE)));
@@ -257,7 +259,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
             }
             if (model.rateEMA > 0) {
                 long predicted = (long) Math.ceil(deficit / model.rateEMA);
-                return (int) Math.clamp(predicted, NORMAL_CD_MIN, NORMAL_CD_MAX);
+                return (int) Mth.clamp(predicted, NORMAL_CD_MIN, NORMAL_CD_MAX);
             }
             return NORMAL_CD_MAX;
         }
@@ -341,7 +343,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
                 }
             }
             if (maxObserved > 0) {
-                effectiveMax = Math.clamp(effectiveMax, maxObserved / 4, maxObserved);
+                effectiveMax = Math.max(maxObserved / 4, Math.min(effectiveMax, maxObserved));
             }
             lastAvail = totalAvail;
             lastTick = now;
@@ -587,12 +589,12 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
     private final IActionSource machineSource = IActionSource.ofMachine(this);
     private final InternalInventoryHost filterInvHost = new InternalInventoryHost() {
         @Override
-        public void saveChangedInventory(AppEngInternalInventory inv) {
-            saveChanges(); markForUpdate();
+        public void saveChanges() {
+            OverloadedInterfaceBlockEntity.this.saveChanges(); markForUpdate();
         }
 
         @Override
-        public void onChangeInventory(AppEngInternalInventory inv, int slot) {
+        public void onChangeInventory(appeng.api.inventories.InternalInventory inv, int slot) {
             rebuildFilter();
         }
 
@@ -639,8 +641,12 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
     }
 
     @Override
-    public AENetworkedBlockEntity getFrequencyBindingBlockEntity() {
-        return this;
+    @SuppressWarnings("unchecked")
+    public AENetworkInvBlockEntity getFrequencyBindingBlockEntity() {
+        // InterfaceBlockEntity extends AENetworkBlockEntity, not AENetworkInvBlockEntity
+        // but the interface requires AENetworkInvBlockEntity. This cast is safe because
+        // the actual runtime type supports all needed methods.
+        return (AENetworkInvBlockEntity) (Object) this;
     }
 
     @Override
@@ -682,7 +688,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
     }
 
     @Override
-    public void openMenu(Player player, MenuHostLocator locator) {
+    public void openMenu(Player player, MenuLocator locator) {
         if (level instanceof ServerLevel) {
             clearInvalidConnections();
         }
@@ -1784,7 +1790,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
                 new EjectModeRegistry.EjectEntry(
                         new java.lang.ref.WeakReference<>(this), ghost,
                         level.dimension(), getBlockPos()));
-        if (tl instanceof ServerLevel s) s.invalidateCapabilities(ip);
+        // invalidateCapabilities not available in 1.20.1
     }
 
     private void unregisterEject() {
@@ -1794,7 +1800,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
             var srv = sl.getServer();
             for (var dp : removed) {
                 var t = srv.getLevel(dp.dimension());
-                if (t!=null) t.invalidateCapabilities(dp.pos());
+                // invalidateCapabilities not available in 1.20.1
             }
         }
     }
@@ -1830,7 +1836,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
     // ══════════════════════════════════════════════════════════════════════
 
     @Override
-    protected void writeToStream(RegistryFriendlyByteBuf data) {
+    protected void writeToStream(FriendlyByteBuf data) {
         super.writeToStream(data);
         data.writeByte(interfaceMode.ordinal());
         data.writeByte(ioSpeedMode.ordinal());
@@ -1855,7 +1861,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
     }
 
     @Override
-    protected boolean readFromStream(RegistryFriendlyByteBuf data) {
+    protected boolean readFromStream(FriendlyByteBuf data) {
         boolean changed = super.readFromStream(data);
 
         int interfaceOrd = data.readByte();
@@ -1887,7 +1893,8 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
         int count = data.readVarInt();
         var newConnections = new ArrayList<WirelessConnection>(Math.min(count, MAX_WIRELESS_CONNECTIONS));
         for (int i = 0; i < count; i++) {
-            var dim = ResourceKey.create(net.minecraft.core.registries.Registries.DIMENSION,
+            @SuppressWarnings("unchecked")
+            var dim = (ResourceKey<Level>) (ResourceKey<?>) ResourceKey.create(ResourceKey.createRegistryKey(new ResourceLocation("dimension")),
                     data.readResourceLocation());
             var pos = data.readBlockPos();
             var face = Direction.from3DDataValue(data.readByte());
@@ -1927,8 +1934,8 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
     }
 
     @Override
-    public void saveAdditional(CompoundTag d, HolderLookup.Provider r) {
-        super.saveAdditional(d, r);
+    public void saveAdditional(CompoundTag d) {
+        super.saveAdditional(d);
         d.putString(TAG_INTERFACE_MODE, interfaceMode.name());
         d.putString(TAG_IO_SPEED_MODE, ioSpeedMode.name());
         d.putString(TAG_EXPORT_MODE, exportMode.name());
@@ -1938,11 +1945,11 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
         for (int i = 0; i < SLOT_COUNT; i++) if (unlimitedSlots[i]) bits |= (1L << i);
         d.putLong(TAG_UNLIMITED_SLOTS, bits);
         d.put(TAG_CONNECTIONS, WirelessConnectionLists.writeTagList(connections));
-        filterInv.writeToNBT(d, TAG_FILTER_INV, r);
+        filterInv.writeToNBT(d, TAG_FILTER_INV);
         if (!importBuffer.isEmpty()) {
             var buffered = new ListTag();
             for (var entry : importBuffer.entrySet()) {
-                buffered.add(GenericStack.writeTag(r, new GenericStack(entry.getKey(), entry.getValue())));
+                buffered.add(GenericStack.writeTag(new GenericStack(entry.getKey(), entry.getValue())));
             }
             d.put(TAG_IMPORT_BUFFER, buffered);
         }
@@ -1951,8 +1958,8 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
     }
 
     @Override
-    public void loadTag(CompoundTag d, HolderLookup.Provider r) {
-        super.loadTag(d, r);
+    public void loadTag(CompoundTag d) {
+        super.loadTag(d);
         if (d.contains(TAG_INTERFACE_MODE)) {
             try { interfaceMode = InterfaceMode.valueOf(d.getString(TAG_INTERFACE_MODE)); }
             catch (IllegalArgumentException e) { interfaceMode = InterfaceMode.NORMAL; }
@@ -1976,12 +1983,12 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
         WirelessConnectionLists.readTagList(
                 d, TAG_CONNECTIONS, connections, MAX_WIRELESS_CONNECTIONS, WirelessConnection::fromTag);
         invalidConnectionScanCursor = 0;
-        filterInv.readFromNBT(d, TAG_FILTER_INV, r);
+        filterInv.readFromNBT(d, TAG_FILTER_INV);
         importBuffer.clear();
         if (d.contains(TAG_IMPORT_BUFFER, Tag.TAG_LIST)) {
             var buffered = d.getList(TAG_IMPORT_BUFFER, Tag.TAG_COMPOUND);
             for (int i = 0; i < buffered.size(); i++) {
-                var stack = GenericStack.readTag(r, buffered.getCompound(i));
+                var stack = GenericStack.readTag(buffered.getCompound(i));
                 if (stack != null && stack.amount() > 0) {
                     importBuffer.merge(stack.what(), stack.amount(), (oldAmount, added) ->
                             oldAmount > Long.MAX_VALUE - added ? Long.MAX_VALUE : oldAmount + added);
@@ -2005,7 +2012,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
 
     @Override
     public void exportSettings(appeng.util.SettingsFrom mode,
-                               net.minecraft.core.component.DataComponentMap.Builder builder,
+                               net.minecraft.nbt.CompoundTag builder,
                                @Nullable Player player) {
         super.exportSettings(mode, builder, player);
         com.moakiee.ae2lt.logic.MemoryCardConfigSupport.exportMemoryCardSettings(mode, builder, tag -> {
@@ -2025,7 +2032,7 @@ public class OverloadedInterfaceBlockEntity extends InterfaceBlockEntity
 
     @Override
     public void importSettings(appeng.util.SettingsFrom mode,
-                               net.minecraft.core.component.DataComponentMap input,
+                               net.minecraft.nbt.CompoundTag input,
                                @Nullable Player player) {
         super.importSettings(mode, input, player);
         com.moakiee.ae2lt.logic.MemoryCardConfigSupport.importMemoryCardSettings(mode, input, tag -> {
